--- a/src/scss/_course.scss
+++ b/src/scss/_course.scss
@@ -44,9 +44,11 @@
 		}
 	}
 	.module {
-		@apply bg-white border border-white mb-4 px-8 rounded-xl;
+		&:first-child {
+			@apply border-t-0;
+		}
 		a {
-			@apply flex items-center justify-between px-4 py-8;
+			@apply bg-white border border-white flex items-center justify-between mb-4 px-12 py-8 rounded-xl;
 			&:hover {
 				.icon02,
 				.arrow {
@@ -64,26 +66,23 @@
 					@apply fill-current text-lightblue;
 				}
 			}
-		}
-		&:hover {
-			@apply bg-lightblue;
-			.ldBar.line2 {
-				.baseline {
+			&:hover {
+				@apply bg-lightblue;
+				.ldBar.line2 {
+					.baseline {
+						@apply text-white;
+					}
+					.mainline {
+						@apply text-limegreen;
+					}
+				}
+				.left .text {
 					@apply text-white;
 				}
-				.mainline {
-					@apply text-limegreen;
+				.right p {
+					@apply text-white;
 				}
 			}
-			.left .text {
-				@apply text-white;
-			}
-			.right p {
-				@apply text-white;
-			}
-		}
-		&:first-child {
-			@apply border-t-0;
 		}
 		.left,
 		.right {
