--- a/src/scss/_module.scss
+++ b/src/scss/_module.scss
@@ -2,12 +2,25 @@
 	#custom-scroll {
 		@apply relative;
 	}
+	h2 {
+		@apply font-bold mb-8 text-lg text-darkblue;
+	}
+	video {
+		@apply mb-16;
+		border-radius: 1.5rem;
+	}
+	.chapter-text {
+		@apply text-base text-darkblue;
+		p {
+			@apply mb-3;
+		}
+	}
 	.block {
 		@apply bg-white mb-8 py-8 rounded-3xl;
 		.check-done,
 		.check-undone,
 		.icon02 {
-			@apply mr-4;
+			@apply mr-3;
 		}
 		.check-done,
 		.check-undone {
@@ -18,6 +31,10 @@
 		}
 		&.noend {
 			@apply pb-0;
+		}
+		&-first {
+			border-bottom-left-radius: 0 !important;
+			border-bottom-right-radius: 0 !important;
 		}
 		&-header {
 			@apply px-8;
@@ -44,18 +61,17 @@
 		}
 	}
 	.chapter {
-		&-title,
 		&-name {
-			@apply font-bold text-base-sm;
+			@apply pr-4 text-base-sm text-lightblue;
 		}
 		&-footer {
-			@apply bg-bggray pb-8 rounded-b-3xl;
+			@apply bg-bggray mb-8 pb-8 rounded-b-3xl;
 			&_text-wrap {
 				@apply flex items-center justify-between;
 				div {
 					@apply flex items-center pr-8 text-darkblue text-sm;
 					p {
-						@apply w-11;
+						@apply w-16;
 					}
 				}
 			}
@@ -63,6 +79,7 @@
 				@apply px-8 py-2 text-darkblue text-base-sm;
 			}
 			.icon02 {
+				@apply mr-3 w-5;
 				path {
 					@apply fill-current text-white;
 				}
@@ -70,37 +87,50 @@
 		}
 		&-header {
 			@apply flex items-center px-8 py-2 relative text-darkblue;
+			&-title {
+				@apply flex flex-grow;
+			}
 			&:first-child {
 				@apply pt-4;
 			}
 			&:after {
 				@apply absolute border-b border-line;
-				bottom: -0.05rem;
+				bottom: 0rem;
 				content: "";
 				left: 2%;
 				width: 96%;
 			}
+			&:last-child {
+				&:after,
+				div:after {
+					@apply bottom-0 border-0 w-0;
+				}
+			}
+			&.selected {
+				@apply bg-lightblue text-white;
+			}
 			div {
 				@apply flex items-center justify-between;
 				&:after {
-					@apply absolute border-b border-line z-20;
+					@apply absolute border-b z-20;
+					border-color: #f5f5f5;
 					bottom: -0.05rem;
 					content: "";
 					left: 2%;
 					width: 96%;
 				}
 				p {
-					@apply w-11 text-sm;
+					@apply w-16 text-sm;
 				}
 			}
 			p {
 				@apply flex-grow leading-5;
 			}
 		}
-		&-wrapper {
-			@apply overflow-y-scroll;
-			max-height: 30rem;
-		}
+	}
+	.check-done,
+	.check-undone {
+		@apply inline-block;
 	}
 	.container {
 		@apply flex items-baseline;
@@ -128,6 +158,9 @@
 	}
 	.material {
 		@apply px-8;
+	}
+	.module-content-list .noend {
+		@apply mb-0;
 	}
 	.module-details {
 		li {
@@ -192,48 +225,8 @@
 			}
 		}
 	}
-	.subchapters {
-		li {
-			a {
-				@apply bg-white justify-between flex items-center px-8 py-2 relative text-lightblue text-base-sm z-10;
-				margin-bottom: 0.1rem;
-				div p {
-					@apply w-11;
-				}
-				&.selected,
-				&:hover {
-					@apply bg-lightblue duration-100 text-white transition-all;
-				}
-				&:after {
-					@apply absolute border-b border-line;
-					bottom: -0.05rem;
-					content: "";
-					left: 2%;
-					width: 96%;
-				}
-			}
-		}
-		div {
-			@apply flex items-center min-w-max;
-			p {
-				@apply text-sm;
-			}
-		}
-		.subchapter-title {
-			@apply flex-grow pr-8 text-sm;
-			&-wrap {
-				@apply flex flex-grow;
-			}
-		}
-	}
-	.subchapter-text {
-		@apply text-darkblue;
-		h2 {
-			@apply pb-8 pt-20 text-xl;
-		}
-		p {
-			@apply text-base-sm;
-		}
+	.selected .chapter-name {
+		@apply text-white;
 	}
 	.subheading {
 		@apply mb-6;
