Completed chapter and home content from back

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -52,14 +52,14 @@ main {
 		height: 100% !important;
 	}
 }
-.has-children {
-	svg {
-		@apply float-right w-2;
-		path {
-			@apply fill-current text-lightblue;
-		}
-	}
-}
+// .has-children {
+// 	svg {
+// 		@apply float-right w-2;
+// 		path {
+// 			@apply fill-current text-lightblue;
+// 		}
+// 	}
+// }
 .heading {
 	@apply font-bold leading-10 mb-8 text-4xl text-lightblue;
 }
