--- a/views/blocks/footer.twig
+++ b/views/blocks/footer.twig
@@ -22,7 +22,7 @@
 			Sanofi-aventis, S.A. Todos los derechos reservados</div>
 		<div class="right">
 			<a href="https://www.sanofi.es/es/aviso-legal" target="_blank">Aviso legal</a>
-			<a href="{{site.url}}/contacto">Contacto</a>
+			<a href="mailto:secretaria.tecnica@k9umlaude.es?subject=Contacto%20K9um%20laude">Contacto</a>
 			<a href="https://www.sanofi.es/es/politica-de-cookies" target="_blank">Política de cookies</a>
 			<a href="https://www.sanofi.es/es/politica-de-privacidad" target="_blank" class="noline">Política de privacidad</a>
 		</div>
