--- a/views/home.twig
+++ b/views/home.twig
@@ -7,7 +7,7 @@
 					<h2 class="heading">{{home_intro[0].custom.title}}</h2>
 					<p class="text">{{home_intro[0].custom.description}}</p>
 					{% if user %}
-						<a href="{{site.url}}/curso/actualizacion-del-abordaje-terapeutico-del-paciente-con-dislipemia/" class="button button-m">Ir al curso</a>
+						<a href="{{site.url}}/curso/actualizacion-del-abordaje-terapeutico-del-paciente-con-dislipemia/" class="button button-l">Acceder al curso</a>
 					{% else %}
 						<a href="{{site.url}}/login" class="button button-m">Acceso</a>
 					{% endif %}
