--- a/views/module.twig
+++ b/views/module.twig
@@ -1,4 +1,4 @@
-{% extends "base.twig" %}
+{% extends "base-protected.twig" %}
 {% block content %}
 	<main id="module">
 		{% set parent = Post(post.belongs_to) %}
